--- a/8B.CoffeeUpdate/index.html
+++ b/8B.CoffeeUpdate/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Update Coffee</title>
+</head>
+<body>
+    <h2>Update Coffee Product</h2>
+    <form action="update.jsp" method="post">
+        <label>ID (of coffee to update):</label>
+        <input type="number" name="id" required><br><br>
+
+        <label>New Coffee Name:</label>
+        <input type="text" name="coffee_name" required><br><br>
+
+        <label>New Price:</label>
+        <input type="number" step="0.01" name="price" required><br><br>
+
+        <input type="submit" value="Update Coffee">
+    </form>
+</body>
+</html>
 
