--- a/9C.AppendEmpSalaryReport/index.html
+++ b/9C.AppendEmpSalaryReport/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Insert Employee</title>
+</head>
+<body>
+    <h2>Enter Employee Details</h2>
+    <form action="insert_emp.jsp" method="post">
+        <input type="number" name="empno" required><br><br>
+        <input type="text" name="empname" required><br><br>
+         <input type="number" name="basicsalary" step="0.01" required><br><br>
+        <input type="submit" value="Add Employee">
+    </form>
+</body>
+</html>
 
