--- a/9D.DeleteEmpS/delete.html
+++ b/9D.DeleteEmpS/delete.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head><title>Delete Employees</title></head>
+<body>
+    <h2>Delete Employees Whose Name Starts With 'S'</h2>
+    <form action="delete.jsp" method="post">
+        <input type="submit" value="Delete Records & Show Report">
+    </form>
+</body>
+</html>
 
